# platform

./: .copyrightignore  .gitignore  AGENTS.md  CMakeLists.txt  precompiled_headers.cc  precompiled_headers.h
cbcompress/: CMakeLists.txt  compress.cc  compress_bench.cc  compression_test.cc
cbcrypto/: CMakeLists.txt  EncryptedFileFormat.md  cbcat.cc  cbcrypto.cc  cbcrypto_test.cc  common.cc  digest.cc  digest_test.cc  dump_keys_runner.cc  encrypted_file_associated_data.h  encrypted_file_header.cc  encrypted_file_header.h  file_reader.cc  file_utilities.cc  file_utilities_test.cc  file_writer.cc  fileio_test.cc  key_derivation.cc  key_store.cc  key_store_test.cc  random_gen.cc  secret_test.cc  symmetric.cc
cbsocket/: CMakeLists.txt  cbsocket_test.cc  socket.cc
cgroup/: CMakeLists.txt  cgroup.cc  cgroup_private.cc  cgroup_private.h  cgroup_tests.cc  cgroup_trace.cc  cgroups.md
cgroup/test/: README.md
cgroup/test/v1/proc/: mounts
cgroup/test/v1/proc/pressure/: cpu
cgroup/test/v1/sys/fs/cgroup/cpu/: cpu.stat  cpuacct.usage_all  cpuacct.usage_percpu_sys  cpuacct.usage_user
cgroup/test/v1/sys/fs/cgroup/cpuacct/: cpuacct.stat  cpuacct.usage  cpuacct.usage_percpu  cpuacct.usage_percpu_user  tasks
cgroup/test/v1/sys/fs/cgroup/memory/: memory.kmem.max_usage_in_bytes  memory.kmem.slabinfo  memory.kmem.usage_in_bytes  memory.max_usage_in_bytes  memory.numa_stat  memory.stat  memory.usage_in_bytes  tasks
cgroup/test/v2/proc/: mounts
cgroup/test/v2/sys/fs/cgroup/: cgroup.threads  cpu.max  cpu.pressure  cpu.stat  io  io.pressure  io.stat  memory  memory.current  memory.numa_stat  memory.pressure  memory.stat
dirutils/: filesystem.cc  misc.cc
extmeta/: CMakeLists.txt  extmeta.cc  extmeta_test.cc
hdrhistogram/: CMakeLists.txt  hdrhistogram.cc  hdrhistogram_test.cc
include/: JSON_checker.h  cJSON.h  cJSON_utils.h  relaxed_atomic.h
licenses/: BSD-3-Clause-Julian-Seward.txt  ZLIB-Mark-Adler.txt
src/: JSON_checker.c  JSON_checker.cc  awaitable_semaphore.cc  backtrace.c  backtrace.cc  base64.cc  breakpad_wrapper.cc  byte_buffer_dump.cc  byteorder.c  cJSON.c  cJSON.cc  cJSON_utils.cc  cb_arena_malloc.cc  cb_malloc.cc  cb_malloc_arena.cc  cb_malloc_default.cc  cb_malloc_stdlib.cc  cb_mktemp.c  cb_mktemp.cc  cb_pthreads.c  cb_pthreads.cc  cb_time.c  cb_time.cc  cb_win32.c  cb_win32.cc  (+65 more)
tests/: CMakeLists.txt  backtrace_test.c  cjson_parse_test.c  crc32c_bench.cc  dirutils_test.cc  gethrtime_test.c  getopt_test.cc  histo_test.cc  json_checker_test.cc  memorymap_test.cc  random_test.c  relaxed_atomic_test.cc  strings_test.c  threadname_test.cc
tests/arena_malloc/: CMakeLists.txt  arena_malloc_test.cc  arena_tracking_bench.cc  cb_malloc_default.cc  cb_malloc_stdlib.cc  jemalloc_thread_shutdown_test.cc
tests/atomic/: CMakeLists.txt  atomic_duration_test.cc  non_negative_counter_test.cc  relaxed_atomic_test.cc
tests/backtrace/: CMakeLists.txt  backtrace_test.c  backtrace_test.cc
tests/base64/: CMakeLists.txt  base64_test.cc  base64_test_bench.cc
tests/benchmarks/: CMakeLists.txt  base64_test_bench.cc  json_checker_bench.cc  json_log_bench.cc
tests/bitset/: CMakeLists.txt  bitset_test.cc
tests/checked_snprintf/: CMakeLists.txt  checked_snprintf_test.cc
tests/cjson/: CMakeLists.txt  cjson_parse_test.c  cjson_parse_test.cc  cjson_utils_test.cc  testdata.json
tests/compression/: CMakeLists.txt  compression_test.cc
tests/corestore/: CMakeLists.txt  corestore_test.cc  corestore_test.h
tests/crc32/: CMakeLists.txt  crc32c_bench.cc  crc32c_test.cc
tests/dirutils/: CMakeLists.txt  dirutils-test-library.cc  dirutils_test.cc  dirutils_test_2.cc
tests/gethrtime/: CMakeLists.txt
tests/getopt/: CMakeLists.txt  cb_getopt_test.cc  getopt_test.cc
tests/gettimeofday/: CMakeLists.txt  gettimeofday_test.cc
tests/histogram/: CMakeLists.txt  histogram_test.cc
tests/integer/: CMakeLists.txt  n_byte_integer_test.cc
tests/interrupt/: CMakeLists.txt  interrupt_test.cc  interrupt_test.py
tests/json_checker/: CMakeLists.txt  json_checker_bench.cc  json_checker_test.cc
tests/make_array/: CMakeLists.txt  make_array_test.cc
tests/memory_tracking_test/: CMakeLists.txt  memory_tracking_allocator_test.cc  memory_tracking_test.cc
tests/memorymap/: CMakeLists.txt  memorymap_test.cc
tests/mktemp/: CMakeLists.txt  cb_mktemp_test.c
tests/optional/: CMakeLists.txt  optional_test.cc
tests/pipe_test/: CMakeLists.txt  pipe_benchmark.cc  pipe_test.cc
tests/process_monitor/: CMakeLists.txt  process_monitor_child.cc
tests/processclock/: CMakeLists.txt  processclock_test.cc
tests/random/: CMakeLists.txt  random_test.cc
tests/ring_buffer/: CMakeLists.txt  ring_buffer_test.cc
tests/rwlock/: CMakeLists.txt  rwlock_test.cc
tests/semaphore/: CMakeLists.txt  semaphore_test.cc
tests/sized_buffer/: CMakeLists.txt  sized_buffer_test.cc
tests/strings/: CMakeLists.txt  hex_test.cc  strings_test.c  strings_test.cc  strnstr_test.cc
tests/sysinfo/: CMakeLists.txt  sysinfo_test.cc  sysinfo_test.cc.cc
tests/thread/: CMakeLists.txt  thread_test.cc
tests/timers/: CMakeLists.txt  scope_timer_test.cc
tests/timeutils/: CMakeLists.txt  timeutils_test.cc
tests/unit_tests/: CMakeLists.txt  atomic_duration_test.cc  backtrace_test.cc  base64_test.cc  bifurcated_counter_test.cc  byte_literals_test.cc  cb_getopt_test.cc  checked_snprintf_test.cc  command_line_options_parser_test.cc  corestore_test.h  dirutils_test.cc  dirutils_test_2.cc  enum_class_bitmask_functions_test.cc  file_sink_tests.cc  from_hex_test.cc  getopt_test.cc  gettimeofday_test.cc  give_kernel_io_advise_test.cc  guarded_test.cc  hex_test.cc  io_hint_test.cc  json_checker_test.cc  json_log_test.cc  monotonic_test.cc  n_byte_integer_test.cc  non_blocking_mutex_test.cc  non_negative_counter_test.cc  optional_test.cc  ordered_map_test.cc  process_monitor_child.cc  process_monitor_test.cc  processclock_test.cc  random_test.cc  relaxed_atomic_test.cc  ring_buffer_test.cc  ringbuffer_test.cc  roundrobin_test.cc  save_file_test.cc  scope_timer_test.cc  semaphore_test.cc  (+11 more)
tests/uuid/: CMakeLists.txt  uuid_test.cc
(+116 files in other folders)
